handbook/bsdinstall: Use latest release macro
Reported by:	WillT <william@hashbangapps.com>
Closes:		https://github.com/freebsd/freebsd-doc/pull/560

--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -182,7 +182,7 @@ Installation file types:
 
 After downloading the image file, download at least one _checksum_ file from the same directory.
 There are two _checksum_ files available, named after the release number and the architecture name.
-For example: `CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64` and `CHECKSUM.SHA512-FreeBSD-13.1-RELEASE-amd64`.
+For example: `CHECKSUM.SHA256-FreeBSD-{rel-latest}-RELEASE-amd64` and `CHECKSUM.SHA512-FreeBSD-{rel-latest}-RELEASE-amd64`.
 
 After downloading one of the files (or both), calculate the _checksum_ for the image file and compare it with the one shown in the _checksum_ file.
 Note that comparing the calculated _checksum_ against the correct file is needed, as they correspond to two different algorithms: SHA256 and SHA512.
@@ -193,8 +193,8 @@ Verifying the _checksum_ in FreeBSD can be done automatically using man:sha256su
 
 [source,shell]
 ....
-% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 --ignore-missing
-FreeBSD-13.1-RELEASE-amd64-dvd1.iso: OK
+% sha256sum -c CHECKSUM.SHA256-FreeBSD-{rel-latest}-RELEASE-amd64 --ignore-missing
+FreeBSD-{rel-latest}-RELEASE-amd64-dvd1.iso: OK
 ....
 
 The checksums must match exactly.
@@ -229,7 +229,7 @@ Be *very careful* that the correct device is used as this command will destroy t
 +
 [source,shell]
 ....
-# dd if=FreeBSD-13.1-RELEASE-amd64-memstick.img of=/dev/da0 bs=1M conv=sync
+# dd if=FreeBSD-{rel-latest}-RELEASE-amd64-memstick.img of=/dev/da0 bs=1M conv=sync
 ....
 +
 If this command fails, verify that the USB stick is not mounted and that the device name is for the disk, not a partition.
