hardware: Add the udl driver
I just discovered this driver while auditing apropos results. Turns out,
this driver has existed since FreeBSD 11.0. It was not built by default
initially, but the module is present on my 15.0-RELEASE box.

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -857,3 +857,5 @@ Information regarding specific video cards and compatibility with Xorg can be fo
 &hwlist.superio;
 
 &hwlist.u2f;
+
+&hwlist.udl;
