--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -3875,6 +3875,7 @@ Cypress USB to RS232 bridge chips:
 
 
 
+
 The
 **uftdi**
 driver supports the following USB to serial UART controllers:
@@ -5033,4 +5034,31 @@ formerly known as Winbond, and ITE, namely:
 The
 **u2f**
 driver supports FIDO/U2F-compatible USB security keys.
+
+
+
+The
+**man:udl[4]**
+driver supports USB display devices
+based on the DisplayLink DL-120 and DL-160 graphic chip, including:
+
+*	Century Corp. Japan Plus One LCD-8000U
+*	Century Corp. Japan Plus One LCD-4300U
+*	DisplayLink USB to DVI
+*	ForwardVideo EasyCAP008 USB to DVI
+*	HP USB 2.0 Docking Station (FQ834)
+*	HP USB Graphics Adapter (NL571)
+*	IOGEAR USB 2.0 External DVI (GUC2020)
+*	Koenig CMP-USBVGA10 and CMP-USBVGA11
+*	Lenovo 45K5296 USB to DVI
+*	Lenovo ThinkVision LT1421
+*	Lilliput UM-70
+*	Nanovision MiMo UM-710 and UM-740
+*	Rextron VCUD60 USB to DVI
+*	Samsung LD220
+*	StarTech CONV-USB2DVI
+*	Sunweit USB to DVI
+*	Unitek Y-2240 USB to DVI
+*	VideoHome NBdock1920
+*	i-tec USB 2.0 Docking Station (USBDVIDOCK)
 
