Apply suggestions from code review
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-10-2025-12/openvox.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/openvox.adoc
@@ -18,19 +18,17 @@ The name "Puppet" being owned by Perforce, the project has been renamed to "Open
 
 To follow these changes, a bunch of ports have been added to the FreeBSD ports tree:
 
-* `sysutils/openvox-agent8` replace `sysutils/puppet8`;
-* `sysutils/openvox-server8` replace `sysutils/puppet-server8`;
-* `databases/openvoxdb8` replace `databases/puppetdb8`;
-* `databases/openvoxdb-terminus8` replace `databases/puppetdb-terminus8`;
-* `sysutils/rubygem-openbolt` replace `sysutils/rubygem-bolt`;
-* `sysutils/rubygem-openfact` replace `sysutils/rubygem-facter`.
+* package:sysutils/openvox-agent8[] replaces package:sysutils/puppet8[];
+* package:sysutils/openvox-server8[] replaces package:sysutils/puppet-server8[];
+* package:databases/openvoxdb8[] replaces package:databases/puppetdb8[];
+* package:databases/openvoxdb-terminus8[] replaces package:databases/puppetdb-terminus8[];
+* package:sysutils/rubygem-openbolt[] replaces package:sysutils/rubygem-bolt[];
+* package:sysutils/rubygem-openfact[] replaces package:sysutils/rubygem-facter[].
 
 They are drop-in replacement of the former ports: while the packages are named "openvox", the service keep their legacy name for now.
 Switching to them is as easy as installing them, and answering yes when pkg propose to remove the legacy packages and install the new ones.
 No other action is required: the module you used with Puppet are expected to continue working with OpenVox.
 
 During this year, Puppet 7 has also reached End-of-Life, so the corresponding ports have been deleted from the FreeBSD ports tree.
-Puppet 7 was the last version that allowed to choose between the C and the Ruby version of facter, the port for the C version (sysutils/facter) has therefore also been removed.
+Puppet 7 was the last version that allowed to choose between the C and the Ruby version of facter, the port for the C version (package:sysutils/facter[]) has therefore also been removed.
 Because the legacy ports of Puppet 8 will not be updated anymore, they will be deprecated soon, and follow the same fate.
-
-Puppet is dead, long live OpenVox!
