Update _index.adoc, small typo

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -488,7 +488,7 @@ xwayland enable
 .....
 
 Finally, for Hikari, no changes are needed.
-Support for `Xwayland` is build in by default.
+Support for `Xwayland` is built in by default.
 To disable that support, rebuild the package from the ports collection and disable Xwayland support at that time.
 
 After these changes are made, start the compositor at the command line and execute a terminal from the key bindings.
