--- a/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
@@ -1,8 +1,8 @@
 === Ports -- Use Bazel as build tool for MongoDB 8.0
 
 Links: +
-link:https://www.freshports.org/databases/mongodb80/[MongoDB 8.0 port]
-link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287546[Bazel 8 PR]
+link:https://www.freshports.org/databases/mongodb80/[MongoDB 8.0 port] URL: https://www.freshports.org/databases/mongodb80/[] +
+link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287546[Bazel 8 PR] URL: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287546[]
 
 Contact: Ronald Klop <ronald@FreeBSD.org>
 
