--- a/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
@@ -17,7 +17,7 @@ Unfortunately the build errors pretty quickly.
 
 Because of security issues in the MongoDB 8.0 port it becomes important to upgrade the port to the latest version.
 
-I'm looking for somebody with experience of a Bazel build to help.
+I am looking for somebody with experience of a Bazel build to help.
 
 * Contact me.
 * Set up your build environment with Bazel 8.
