--- a/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/report-ronald-mongodb80.adoc
@@ -22,4 +22,4 @@ I am looking for somebody with experience of a Bazel build to help.
 * Contact me.
 * Set up your build environment with Bazel 8.
 * Compile and fix.
-* Let's commit it!
+* Let us commit it!
