Update memory file system size configuration details
Added instructions for configuring memory file system sizes.

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -2097,6 +2097,16 @@ When the system boots, memory file systems for [.filename]#/etc# and [.filename]
 By default, these file systems have a maximum capacity of 5 megabytes.
 If the archives do not fit, which is usually the case for [.filename]#/var# when binary packages have been installed, request a larger size by putting the number of 512 byte sectors needed (e.g., 5 megabytes is 10240 sectors) in [.filename]#${NFSROOTDIR}/conf/base/etc/md_size# and [.filename]#${NFSROOTDIR}/conf/base/var/md_size# files for [.filename]#/etc# and [.filename]#/var# file systems respectively.
 
+etc/md_size 16MB, var/md_size 128MB
+[source,shell]
+....
+# mkdir ${NFSROOTDIR}/conf/base/etc
+# echo 32768 >  ${NFSROOTDIR}/conf/base/etc/md_size
+# mkdir ${NFSROOTDIR}/conf/base/var
+# echo 262144 > ${NFSROOTDIR}/conf/base/var/md_size
+....
+
+
 [[network-pxe-setting-up-dhcp]]
 === Configuring the DHCP Server
 
