--- a/website/content/en/status/report-2025-04-2025-06/gcc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/gcc.adoc
@@ -5,8 +5,8 @@ link:https://gcc.gnu.org/[GCC Project] URL: link:https://gcc.gnu.org/[] +
 link:https://gcc.gnu.org/gcc-12/[GCC 12 release series] URL: link:https://gcc.gnu.org/gcc-12/[] +
 link:https://gcc.gnu.org/gcc-13/[GCC 13 release series] URL: link:https://gcc.gnu.org/gcc-13/[] +
 link:https://gcc.gnu.org/gcc-14/[GCC 14 release series] URL: link:https://gcc.gnu.org/gcc-14/[] +
-link:https://gcc.gnu.org/gcc-11/[GCC 15 release series] URL: link:https://gcc.gnu.org/gcc-15/[] +
-link:https://gcc.gnu.org/gcc-11/[GCC 16 release series] URL: link:https://gcc.gnu.org/gcc-16/[] +
+link:https://gcc.gnu.org/gcc-15/[GCC 15 release series] URL: link:https://gcc.gnu.org/gcc-15/[] +
+link:https://gcc.gnu.org/gcc-16/[GCC 16 release series] URL: link:https://gcc.gnu.org/gcc-16/[]
 
 Contact: Lorenzo Salvadore <salvadore@FreeBSD.org>
 
