Apply suggestions from code review
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-10-2025-12/report-ronald-jdk21default.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/report-ronald-jdk21default.adoc
@@ -1,7 +1,8 @@
-=== Ports - Make openjdk21 the default JAVA_VERSION
+=== Ports -- Make OpenJDK 21 the default JAVA_VERSION
 
-link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[Issue 272855]
-link:https://docs.google.com/spreadsheets/d/17hmRQ0ShY4SHHVEkQBVxqK2G88fPZLriTzO26zXdjC4/edit?usp=sharing[Sheet tracking Work in Progress]
+Links:
+link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[Issue 272855] URL: link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[] +
+link:https://docs.google.com/spreadsheets/d/17hmRQ0ShY4SHHVEkQBVxqK2G88fPZLriTzO26zXdjC4/edit?usp=sharing[Sheet tracking Work in Progress] URL: https://docs.google.com/spreadsheets/d/17hmRQ0ShY4SHHVEkQBVxqK2G88fPZLriTzO26zXdjC4/edit?usp=sharing
 
 Contact: Ronald Klop <ronald@FreeBSD.org>
 
@@ -9,11 +10,13 @@ The default JAVA_VERSION in FreeBSD ports is still OpenJDK 8.
 It is time to upgrade this to a more modern version like OpenJDK 21.
 We need to test and fix all ports using Java to build or run with JDK 21, or pin JAVA_VERSION in the port to the latest supported version.
 
-The work is being tracked in PR 272855 and a Google Sheet for more details. (See the links of this report)
+The work is being tracked in PR 272855 and a Google Sheet for more details.
 Already more than half of the ports that failed a test run is fixed.
 
 If you have experience with Java and the ports system you are invited to help.
 I think it is reasonable to have the ports in shape for the JAVA_VERSION=21 setting in February 2026.
+
+Plan:
 
 * Check the last 12 ports and create a PR or commit
 * Commit the PRs that are timeing out on maintainer feedback
