--- a/website/content/en/status/report-2025-10-2025-12/openjdk.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/openjdk.adoc
@@ -17,9 +17,16 @@ In this quarter the following issues/milestones were reached:
 
 * link:https://reviews.freebsd.org/D53326[Released a port] for OpenJDK 25, later link:https://reviews.freebsd.org/D53975[updated to OpenJDK 25.0.1].
   Thanks to Greg Lewis and Kurt Miller for helping.
-* Added https://kodeknekkeriet.net/en/blog/introducing-flavors-in-openjdk-freebsd/[`headless` and `jre` FLAVORS] to the OpenJDK 25 port. This enables building and installing only a headless (no GUI) version of the JDK or just the Java Runtime Environment (no compiler or dev tools). It is also possible to combine these to only install a `headless-jre` variant. This i useful in server environments, or other resource constrained environments where the full JDK and tools are not necessary. The plan is to extend these FLAVORS to the remaining OpenJDK ports as well.
-* Submitted https://bugs.openjdk.org/browse/JDK-8371637[a fix upstream] that fixed invalid memory alignment on systems using `jemalloc`, or other allocators that don't use the https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2293.htm[strong alignment interpretation] of the C standard alignment requirements. This caused problems when allocating small off-heap memory segments using the `java.lang.foreign.Arena` API on FreeBSD. This fix will be included in OpenJDK 26.
-* Deprecated OpenJDK ports https://reviews.freebsd.org/D54176[no longer supported] by upstream. The ports will expire and be removed throughout the first half or 2026, leaving the LTS versions and the latest maintained ports behind.
+* Added link:https://kodeknekkeriet.net/en/blog/introducing-flavors-in-openjdk-freebsd/[`headless` and `jre` FLAVORS] to the OpenJDK 25 port.
+  This enables building and installing only a headless (no GUI) version of the JDK or just the Java Runtime Environment (no compiler or dev tools).
+  It is also possible to combine these to only install a `headless-jre` variant.
+  This is useful in server environments, or other resource constrained environments where the full JDK and tools are not necessary.
+  The plan is to extend these FLAVORS to the remaining OpenJDK ports as well.
+* Submitted link:https://bugs.openjdk.org/browse/JDK-8371637[a fix upstream] that fixed invalid memory alignment on systems using `jemalloc`, or other allocators that do not use the link:https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2293.htm[strong alignment interpretation] of the C standard alignment requirements.
+  This caused problems when allocating small off-heap memory segments using the `java.lang.foreign.Arena` API on FreeBSD.
+  This fix will be included in OpenJDK 26.
+* Deprecated OpenJDK ports link:https://reviews.freebsd.org/D54176[no longer supported] by upstream.
+  The ports will expire and be removed throughout the first half of 2026, leaving the LTS versions and the latest maintained ports behind.
 
 Other notes:
 
