--- a/website/content/en/status/report-2025-10-2025-12/openjdk.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/openjdk.adoc
@@ -30,9 +30,17 @@ In this quarter the following issues/milestones were reached:
 
 Other notes:
 
-* Spent some time digging into https://github.com/battleblow/jdk25u/pull/4[the history of the `getrlimitusage(2)` system call] discovering it was available since version 14.2 despite the man page saying it first appeared in version 15. See also https://reviews.freebsd.org/D53320[related review by emaste]. This was relevant because https://www.freebsd.org/status/report-2025-07-2025-09/#_improve_openjdk_on_freebsd[the performance improvements from previous quarter] relies on this system call. Knowing that it's available for all currently maintained versions of FreeBSD, means we don't need to keep code to fall back to less efficient ways of obtaining the same info.
-* Updates made to the Mac OS X implementation of the Hotspot Serviceability Agent debugging facility broke the BSD implementation. Due to history, these implementations share the same source files and directories despite being somewhat different implementations. Work https://bugs.openjdk.org/browse/JDK-8374372[has been started] on moving the OS X code to it's own implementation, so that we can work on the BSD implementation without having to step on each others toes.
-* Work on changing the way we bootstrap OpenJDK builds in the ports system have been resumed. This work is more relevant again as deprecating unmaintained ports breaks the previous assumption that you could depend on the previous OpenJDK version to build the current version. The new bootstrapping mechanism must be in place before actually expiring the existing ports.
-* I lost access to my Aarch64 test system in the beginning of this quarter, so I have not been able to test as well as I want on that architecture. This situation is now remedied, and I'm in the process of getting the new system set up for building and testing.
+* Spent some time digging into link:https://github.com/battleblow/jdk25u/pull/4[the history of `getrlimitusage(2)` system call] discovering it was available since version 14.2 despite the man page saying it first appeared in version 15.
+  See also link:https://reviews.freebsd.org/D53320[related review by emaste].
+  This was relevant because link:https://www.freebsd.org/status/report-2025-07-2025-09/#_improve_openjdk_on_freebsd[the performance improvements from previous quarter] relies on this system call.
+  Knowing that it is available for all currently maintained versions of FreeBSD, means we do not need to keep code to fall back to less efficient ways of obtaining the same information.
+* Updates made to the Mac OS X implementation of the Hotspot Serviceability Agent debugging facility broke the BSD implementation.
+  Due to history, these implementations share the same source files and directories despite being somewhat different implementations.
+  Work link:https://bugs.openjdk.org/browse/JDK-8374372[has been started] on moving the OS X code to it's own implementation, so that we can work on the BSD implementation without having to step on each others toes.
+* Work on changing the way we bootstrap OpenJDK builds in the ports system has been resumed.
+  This work is more relevant again as deprecating unmaintained ports breaks the previous assumption that you could depend on the previous OpenJDK version to build the current version.
+  The new bootstrapping mechanism must be in place before actually expiring the existing ports.
+* I lost access to my Aarch64 test system in the beginning of this quarter, so I have not been able to test as well as I want on that architecture.
+  This situation is now remedied, and I am in the process of getting the new system set up for building and testing.
 
 Sponsor: The FreeBSD Foundation
