handbook/x11: Fix xorg conf file nvidia example
These instructions are certainly a footgun.

PR:		291208
Reported by:	erichanskrs@gmail.com

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -498,7 +498,7 @@ To configure the NVIDIA(R) driver in a configuration file:
 ....
 Section "Device"
 	Identifier "Card0"
-	Driver     "nvidia-modeset"
+	Driver     "nvidia"
 EndSection
 ....
 ====
@@ -583,7 +583,7 @@ EndSection
 
 Section "Device"
 	Identifier "Card1"
-	Driver     "nvidia-modeset"
+	Driver     "nvidia"
 	BusID     "pci0:0:2:1"
 EndSection
 ....
