website: RU - update all files changed in EN
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D54222

--- a/website/content/ru/administration.adoc
+++ b/website/content/ru/administration.adoc
@@ -11,12 +11,6 @@ NOTE: If any alias listed on this page is modified in the
 then this page must be updated.
 ////
 
-//
-// The FreeBSD Russian Documentation Project
-//
-// Original EN revision (31.07.2025): 9ca5dd5ef904d2cff77a1ac241cf6ab3d26aad84
-//
-
 = Администрирование и управление проектом FreeBSD
 
 == Введение
@@ -95,7 +89,6 @@ https://www.freebsd.org/portmgr/charter/[Устав команды portmgr] по
 * {mat} (Представитель команды администрирования кластера)
 * {pizzamig}
 * {rene}
-* {tcberner} (Секретарь)
 * {dvl}
 
 '''
@@ -149,6 +142,7 @@ https://www.freebsd.org/releng/charter/[Устав команды команда
 * {mmokhi}
 * {cperciva} (Руководитель)
 * {bofh}
+* {ivy}
 
 [[t-donations]]
 == Команда по работе с пожертвованиями <donations@FreeBSD.org>
@@ -205,7 +199,7 @@ https://www.freebsd.org/releng/charter/[Устав команды команда
 Секретарь команды управления портами FreeBSD является членом команды управления портами без права голоса, ответственным за документирование работы, выполненной portmgr, отслеживание процедур голосования и взаимодействие с другими командами, особенно с административной и Основной командами.
 Секретарь команды управления портами также отвечает за написание и рассылку ежемесячных отчетов о состоянии сообществу разработчиков FreeBSD, содержащих сводку последних решений и действий portmgr.
 
-* {tcberner}
+* (vacant)
 
 [[t-srctmgr-secretary]]
 == Секретарь команды управления исходным кодом <srcmgr-secretary@FreeBSD.org>
@@ -378,3 +372,9 @@ admins mail aliases intentionally left incomplete
 
 * {linimon}
 * {koobs}
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (04.12.2025): d5213e70dd8fd4771458cfa67b17b535ff4867c8
+//
