--- a/website/content/ru/releases/15.0R/relnotes.adoc
+++ b/website/content/ru/releases/15.0R/relnotes.adoc
@@ -82,7 +82,7 @@ toc::[]
 # cp -R /usr/src/share/keys/pkgbase-15 /usr/share/keys/pkgbase-15
 ....
 
-Пользователи, у которых нет установленных актуальных исходных кодов, могут использовать менее безопасный, но более простой подход, проверяя контрольные суммы после установки. Поскольку это архитектурно-независимые файлы, контрольные суммы будут совпадать на всех платформах.
+Пользователи, у которых нет установленных актуальных исходных кодов, могут использовать менее безопасный, но более простой подход, проверяя контрольные суммы после установки. Поскольку это архитектурно-независимые файлы, контрольные суммы будут совпадать на всех платформах. Перед обновлением через man:pkg[8] необходимо будет включить репозиторий пакетов FreeBSD-base.
 
 ....
 # pkg add -f https://pkg.freebsd.org/FreeBSD:15:$(uname -p)/base_release_0/FreeBSD-pkg-bootstrap-15.0.pkg
@@ -92,6 +92,9 @@ ab261a3b84ffc11654ac0bafbb7d6b3f1b6afc30bfabab3bcff64259678eac26 /etc/pkg/FreeBS
 036ae4f9c441a3febb41734bbb37227ec3374edd3c6c687e5cb70d580efbea30 /usr/share/keys/pkg/trusted/pkg.freebsd.org.2013102301
 529c79e85a6ca152faa9d57ead85fe0111ffada8d0a0fa2f11fc510999fa50df /usr/share/keys/pkgbase-15/trusted/awskms-15
 c368ec8d05654bdaad34742c1d75b9b150bfc3892838cef32f6e5b036b0c0605 /usr/share/keys/pkgbase-15/trusted/backup-signing-15
+# mkdir -p /usr/local/etc/pkg/repos
+# echo "FreeBSD-base: { enabled: yes }" > /usr/local/etc/pkg/repos/FreeBSD.conf
+
 ....
 
 [IMPORTANT]
@@ -1709,5 +1712,5 @@ gitref:8c6df7ead19c[repository=src] (Спонсировано The FreeBSD Founda
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (02.12.2025): cc70dfe908fe23133b3c645db822563f8aaa9098
+// Original EN revision (02.12.2025): 7743f2e569d21434ea4041f0857f9134e36fbbb2
 //
