--- a/website/content/ru/releng/_index.adoc
+++ b/website/content/ru/releng/_index.adoc
@@ -50,28 +50,28 @@ General information about committing to -STABLE.
 [cols="1,1,2,4",options="header",]
 |===
 |Ветка |Статус |Контакт |Примечания
-|`main` |Открыта |committers |Ветка активной разработки для 16.0-CURRENT.
-|`stable/15` |Открыта |committers |Ветка разработки для FreeBSD 15-STABLE.
-|`releng/15.0` |Заморожена |re@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 15.0.
-|`stable/14` |Открыта |committers |Ветка разработки для FreeBSD 14-STABLE.
+|`main` |Открыта |коммиттеры |Ветка активной разработки для 16.0-CURRENT.
+|`stable/15` |Открыта |коммиттеры |Ветка разработки для FreeBSD 15-STABLE.
+|`releng/15.0` |Заморожена |security-officer@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 15.0.
+|`stable/14` |Открыта |коммиттеры |Ветка разработки для FreeBSD 14-STABLE.
 |`releng/14.3` |Заморожена |security-officer@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 14.3.
 |`releng/14.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.2 (официально не поддерживается).
 |`releng/14.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.1 (официально не поддерживается).
 |`releng/14.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.0 (официально не поддерживается).
-|`stable/13` |Открыта |committers |Ветка разработки для FreeBSD 13-STABLE.
+|`stable/13` |Открыта |коммиттеры |Ветка разработки для FreeBSD 13-STABLE.
 |`releng/13.5` |Заморожена |security-officer@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 13.5.
 |`releng/13.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.4 (официально не поддерживается).
 |`releng/13.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.3 (официально не поддерживается).
 |`releng/13.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.2 (официально не поддерживается).
 |`releng/13.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.1 (официально не поддерживается).
 |`releng/13.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.0 (официально не поддерживается).
-|`stable/12` |Открыта |committers |Ветка сопровождения для FreeBSD 12-STABLE (официально не поддерживается).
+|`stable/12` |Открыта |коммиттеры |Ветка сопровождения для FreeBSD 12-STABLE (официально не поддерживается).
 |`releng/12.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.4 (официально не поддерживается).
 |`releng/12.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.3 (официально не поддерживается).
 |`releng/12.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.2 (официально не поддерживается).
 |`releng/12.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.1 (официально не поддерживается).
 |`releng/12.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.0 (официально не поддерживается).
-|`stable/11` |Открыта |committers |Ветка сопровождения для FreeBSD 11-STABLE (официально не поддерживается).
+|`stable/11` |Открыта |коммиттеры |Ветка сопровождения для FreeBSD 11-STABLE (официально не поддерживается).
 |`releng/11.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.4 (официально не поддерживается).
 |`releng/11.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.3 (официально не поддерживается).
 |`releng/11.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.2 (официально не поддерживается).
@@ -111,5 +111,5 @@ General information about committing to -STABLE.
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (29.11.2025): 4b6a7a1cbb717983adf561aa857adbd6b82ffd83
+// Original EN revision (09.12.2025): e9a7ebc74a84e084330c79cc5249414257acfab3
 //
