--- a/website/content/ru/security/_index.adoc
+++ b/website/content/ru/security/_index.adoc
@@ -116,12 +116,12 @@ link:unsupported[Более старые выпуски] не поддержив
 [[model]]
 == Модель поддержки FreeBSD
 
-В соответствии с текущей моделью поддержки стабильная ветка каждой основной версии явно поддерживается в течение 5 лет, в то время как каждый отдельный релиз с точкой поддерживается всего три месяца после выхода следующего релиза с точкой.
+Каждый минорный выпуск поддерживается только три месяца после выхода следующего минорного релиза в рамках той же мажорной версии, либо (для финального минорного выпуска) до окончания поддержки стабильной ветки мажорной версии. Начиная с FreeBSD 15, каждая стабильная ветка явно поддерживается в течение 4 лет с момента выхода её релиза с нулевой минорной версией. Поддержка стабильной ветки FreeBSD 13 завершается 30 апреля 2026 года, а для FreeBSD 14 — 30 ноября 2028 года.
 
-Подробности и обоснование этой модели можно найти в https://lists.freebsd.org/pipermail/freebsd-announce/2015-February/001624.html[официальном объявлении], отправленном в феврале 2015 года.
+Обоснование этой модели подробно описано в официальных объявлениях: https://lists.freebsd.org/archives/freebsd-announce/2024-July/000143.html[о 4-летнем периоде поддержки стабильных веток], отправленном в июле 2024 года, и https://lists.freebsd.org/pipermail/freebsd-announce/2015-February/001624.html[о переходе на модель поддержки на основе веток], отправленном в феврале 2015 года.
 
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (15.10.2025): a3c08199268bed7b921428d6e39f095a0758c333
+// Original EN revision (09.11.2025): 56e5b24d8e91f246e36352ecc023ac86528f9b1e
 //
