--- a/website/content/ru/status/_index.adoc
+++ b/website/content/ru/status/_index.adoc
@@ -7,7 +7,7 @@ include::shared/ru/urls.adoc[]
 
 = Отчёты о состоянии работ FreeBSD
 
-== Следующий квартальный отчёт (Июль -- Сентябрь) принимается до: 30 сентября 2025 г.
+== Следующий квартальный отчёт (Октябрь -- Декабрь) принимается до: 31 декабря 2025 г.
 
 Если вы заинтересованы в отправке отчётов о состоянии работ или вам интересно, как работает процесс публикации, пожалуйста, ознакомьтесь с нашим link:{freebsd-status-report-process}[описанием процесса подготовки отчётов о состоянии].
 
@@ -23,6 +23,7 @@ include::shared/ru/urls.adoc[]
 
 == 2025
 
+* link:../../status/report-2025-07-2025-09/[Июль 2025 - Сентябрь 2025]
 * link:../../status/report-2025-04-2025-06/[Апрель 2025 - Июнь 2025]
 * link:../../status/report-2025-01-2025-03/[Январь 2025 - Март 2025]
 
@@ -197,5 +198,5 @@ include::shared/ru/urls.adoc[]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (03.04.2023): f0067defa05f6e07e7dc1a41ca3f10769f431c70
+// Original EN revision (30.11.2025): f1086ae6be41ec3ba01b23bd4f64171a70d21887
 //
