--- a/website/content/ru/where.adoc
+++ b/website/content/ru/where.adoc
@@ -172,8 +172,7 @@ a|
 * link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/i386/Latest/[i386]
 * link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64]
 * link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/riscv64/Latest/[riscv64]
-* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64] (BASIC-
-CI)
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
 * link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
@@ -309,5 +308,5 @@ image::../../gifs/fastlyLogo-red-SVG.svg[Fastly Logo,120]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (17.10.2025): 785a0a904c9bbb30b8832f7304a80b15008d33fc
+// Original EN revision (29.11.2025): 4b6a7a1cbb717983adf561aa857adbd6b82ffd83
 //
