--- a/website/content/ru/commercial/consult.adoc
+++ b/website/content/ru/commercial/consult.adoc
@@ -9,7 +9,7 @@ grouped: false
 Здесь вы найдете компании, предлагающие коммерческие продукты и/или услуги для FreeBSD.
 
 Для вашего удобства мы разделили наш растущий коммерческий список на несколько разделов.
-Если Ваша компания поддерживает продукт для FreeBSD, сервис, дает консультации, или осуществляет техническую поддержку, информация о которых должна быть внесена на эту страницу, пожалуйста заполните link:../../support/bugreports/[форформу в сообщениях о проблемему] с категорией Documentation->Website.
+Если Ваша компания поддерживает продукт для FreeBSD, сервис, дает консультации, или осуществляет техническую поддержку, информация о которых должна быть внесена на эту страницу, пожалуйста заполните link:../../support/bugreports/[форму в сообщениях о проблеме] с категорией Documentation->Website.
 В сообщение должен параграф средней длины, описывающий вашу компанию.
 Пожалуйста, имейте ввиду, что включение поставщиков в наш список не означает поддержку их продуктов или сервисов проектом FreeBSD.
 
