--- a/website/content/en/status/report-2025-10-2025-12/jdk21default.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/jdk21default.adoc
@@ -19,6 +19,6 @@ I think it is reasonable to have the ports in shape for the JAVA_VERSION=21 sett
 Plan:
 
 * Check the last 12 ports and create a PR or commit
-* Commit the PRs that are timeing out on maintainer feedback
+* Commit the PRs that are timing out on maintainer feedback
 * Ask for another exp-run
 * If done, increase JAVA_VERSION
