--- a/website/content/en/status/report-2025-10-2025-12/geneve-support.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/geneve-support.adoc
@@ -13,7 +13,7 @@ Here is what I have done:
 * Support for unicast and multicast underlay for both IPv4 and IPv6.
 * Jail support and per-VNET geneve tunnel.
 * RXCSUM/TXCSUM/TSO offload capabilities.
-* Support for inheritence and configuration of ToS, TTL, and DF values.
+* Support for inheritance and configuration of ToS, TTL, and DF values.
 * Support for NETLINK/WITHOUT_NETLINK for if_geneve.
 * Updated ifconfig to support tunnel creation and modification using NETLINK for if_geneve.
 * Wrote man page for man:geneve[4] and updated man:ifconfig[8] to include geneve parameters.
@@ -22,7 +22,7 @@ Here is what I have done:
 Dependencies and related reviews to support geneve implementation:
 
 * Bug fix on netlink dump assignment link:https://reviews.freebsd.org/D54190[D54190] (done)
-* Bug fix on netlink credential inheritence link:https://reviews.freebsd.org/D54109[54109] (under review)
+* Bug fix on netlink credential inheritance link:https://reviews.freebsd.org/D54109[54109] (under review)
 * Update ECN tunneling behavior per RFC6040 (required by GENEVE) link:https://reviews.freebsd.org/D53516[53516] (under review)
 
 The review is large because I implemented features that are already available on other platforms before submitting.
