Pr-Guidelines article: Note stale content
While this Article is being rewritten, warn about stale content.

Reviewed by:		imp, lwhsu, pauamma (previous), ziaee
Differential Revision:	https://reviews.freebsd.org/D53779

--- a/documentation/content/en/articles/pr-guidelines/_index.adoc
+++ b/documentation/content/en/articles/pr-guidelines/_index.adoc
@@ -64,6 +64,10 @@ Note: in this Article, the term "PR" means "Bugzilla Problem Report".
 [[pr-lifecycle]]
 == Problem Report Life-cycle
 
+[NOTE]
+====
+This section is obsolete and being rewritten as of January 2026.
+====
 * The Reporter submits a bug report on the website. The bug is in the `Needs Triage` state.
 * Jane Random BugBuster confirms that the bug report has sufficient information to be reproducible. If not, she goes back and forth with the reporter to obtain the needed information. At this point the bug is set to the `Open` state.
 * Joe Random Committer takes interest in the report and assigns it to himself, or Jane Random BugBuster decides that Joe is best suited to handle it and assigns it to him. The bug should be set to the `In Discussion` state.
@@ -81,6 +85,10 @@ If the problem contained within cannot be solved, or has occurred again, it is n
 [[pr-states]]
 == Problem Report State
 
+[NOTE]
+====
+This section is obsolete and being rewritten as of January 2026.
+====
 It is important to update the state of a Problem Report when certain actions are taken.
 The state should accurately reflect the current state of work on the issue.
 
