point directly to the mailing list Message-ID search service
The script runs on a diffent server and there is no need
for a copy of the form.

--- a/website/content/en/search/_index.adoc
+++ b/website/content/en/search/_index.adoc
@@ -13,7 +13,7 @@ include::shared/en/urls.adoc[]
 * <<manpages,Manual pages>>
 * <<ports,Ported applications>>
 * <<mailinglists,Mailing list archives>>
-* link:search-mid[Message-ID]
+* https://mail-archive.freebsd.org/cgi/mid.cgi[Mailing List Message-ID Search]
 * https://bugs.FreeBSD.org/search/[Problem Reports (Bugs) database]
 * link:https://man.freebsd.org/cgi/man.cgi[Manual Pages]
 * link:https://ports.freebsd.org/cgi/ports.cgi[Ports Search]
