remove double <hr> in footer§

--- a/website/content/en/search/opensearch/_index.adoc
+++ b/website/content/en/search/opensearch/_index.adoc
@@ -17,6 +17,5 @@ Firefox put a few popular search sites in the Search Bar in the upper-right corn
 
 External help links: https://addons.mozilla.org/en-US/firefox/search/?category=search-tools&sort=recommended%2Cusers&type=extension[Firefox Search Engines]
 
-link:../[Return to the search page]
+link:../[search]
 
-'''''
