split the list of search service into "internal" and "external"

--- a/website/content/en/search/_index.adoc
+++ b/website/content/en/search/_index.adoc
@@ -7,17 +7,20 @@ include::shared/en/urls.adoc[]
 
 = Search
 
-== FreeBSD Search Services
+== Internal Search Services
 
-* <<web,Web pages>>
 * <<manpages,Manual pages>>
 * <<ports,Ported applications>>
-* <<mailinglists,Mailing list archives>>
 * https://mail-archive.freebsd.org/cgi/mid.cgi[Mailing List Message-ID Search]
 * https://bugs.FreeBSD.org/search/[Problem Reports (Bugs) database]
 * link:https://man.freebsd.org/cgi/man.cgi[Manual Pages]
 * link:https://ports.freebsd.org/cgi/ports.cgi[Ports Search]
-* http://fxr.watson.org/[The Source Code]
+
+== External Search Services
+
+* <<web,Web pages>>, by DuckDuckGo
+* <<mailinglists,Mailing list archives>>, by DuckDuckGo
+* http://fxr.watson.org/[The Source Code], by fxr.watson.org
 
 link:opensearch[List of FreeBSD OpenSearch Plugins]
 
