--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -60,7 +60,17 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [[open-issues]]
 == Open Issues
 
-No open issues.
+1. **man:ipfw[8]** denies networking when booting a 15.0 kernel with 14.3 userland +
+**Workaround**: upgrade completely before rebooting man:ipfw[8] systems +
+**State**: open - https://bugs.freebsd.org/291562 +
+
+2. **man:devinfo[8]** output format accidentally changed +
+**Workaround**: users parsing man:devinfo[8] must build it from a newer source +
+**State**: reverted in main - https://bugs.freebsd.org/291511 +
+
+3. **man:pkgbase[7]** system upgrading from 14.3 to 15.0 is not supported +
+**Workaround**: systems installed with man:pkgbase[7] must backup and reinstall +
+**State**: works as intended, man:pkgbase[7] is an experimental preview +
 
 [[late-news]]
 == Late-Breaking News
