website: RU: Update to the latet EN revisions.
ru/search/_index.adoc (b6630fbab8b2befa8dd320535f2290e8b1082ce6)
ru/search/opensearch/_index.adoc (e84ab1b5742989c042ada16ffdd3aed11439eae4)
ru/releases/15.0R/errata.adoc (7b936eee18f57cb2b1f05d5120b9dc45275a163b)

The wording improved in several places.

Approved by:	maxim (mentor)
Differential Revision:	https://reviews.freebsd.org/D54533

--- a/website/content/ru/search/_index.adoc
+++ b/website/content/ru/search/_index.adoc
@@ -7,19 +7,20 @@ include::shared/ru/urls.adoc[]
 
 = Поиск
 
-== Службы поиска FreeBSD
+== Внутренние поисковые сервисы
 
-* <<web,Страницы WWW>>
-* <<manpages,Страницы Справочника>>
-* <<ports,Порты>>
-* <<mailinglists,Архивы списков рассылки>>
-* link:search-mid[Message-ID]
+* https://mail-archive.freebsd.org/cgi/mid.cgi[Поиск в списках рассылки по Message-ID]
 * https://bugs.FreeBSD.org/search/[База данных сообщений о проблемах (ошибках)]
-* link:https://man.freebsd.org/cgi/man.cgi[Страницы справочника]
-* link:https://ports.freebsd.org/cgi/ports.cgi[Поиск по портам]
-* http://fxr.watson.org/[Исходный код]
+* link:https://man.freebsd.org/cgi/man.cgi[Страницы Справочника]
+* link:https://ports.freebsd.org/cgi/ports.cgi[Поиск в портах]
 
-link:opensearch[Список плагинов OpenSearch для FreeBSD]
+== Внешние поисковые сервисы
+
+* <<web,Веб-страницы>> от DuckDuckGo
+* <<mailinglists,Архивы списков рассылки>> от DuckDuckGo
+* http://fxr.watson.org/[Исходный код] от fxr.watson.org
+
+link:opensearch[Список подключаемых модулей OpenSearch для FreeBSD]
 
 '''''
 
@@ -29,24 +30,6 @@ link:opensearch[Список плагинов OpenSearch для FreeBSD]
 === Поиск внутри сайтов:
 
 {{< form-search-site >}}
-
-'''''
-
-[[manpages]]
-== Страницы Справочника
-
-=== Поиск:
-
-{{< form-search-man >}}
-
-'''''
-
-[[ports]]
-== Порты
-
-=== Поиск:
-
-{{< form-search-ports >}}
 
 '''''
 
@@ -62,6 +45,5 @@ link:opensearch[Список плагинов OpenSearch для FreeBSD]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (08.12.2023): 94ec0bdbac6730977b5175527225ef9c66aaef35
+// Original EN revision (03.01.2026): b6630fbab8b2befa8dd320535f2290e8b1082ce6
 //
-
