--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -11,7 +11,7 @@ sidenav: download
 
 == Аннотация
 
-В этом документе перечислены пункты исправлений и дополнений для FreeBSD {release}, содержащие важную информацию, обнаруженную после выпуска или слишком поздно в цикле выпуска, чтобы быть включёнными в документацию выпуска.
+В этом документе перечислены пункты исправлений и дополнений для FreeBSD {release}, содержащие важную информацию, обнаруженную после выпуска или слишком поздно в цикле выпуска, чтобы быть включённой в документацию выпуска.
 Эта информация включает рекомендации по безопасности, а также новости, связанные с программным обеспечением или документацией, которые могут повлиять на его работу или удобство использования.
 Перед установкой этой версии FreeBSD всегда следует обращаться к актуальной версии этого документа.
 
@@ -64,7 +64,17 @@ sidenav: download
 [[open-issues]]
 == Открытые проблемы
 
-Открытых проблем нет.
+1. **man:ipfw[8]**: Сервис блокирует работу сетевых служб при загрузке ядра 15.0 с пользовательским окружением 14.3 +
+**Обходное решение**: полностью завершите модернизацию до перезапуска систем с man:ipfw[8] +
+**Статус**: открытая - https://bugs.freebsd.org/291562 +
+
+2. **man:devinfo[8]**: Формат выдаваемого результата случайно изменился +
+**Обходное решение**: пользователи, обрабатывающие результат работы утилиты man:devinfo[8], должны скомпилировать её из обновлённого исходного кода +
+**Статус**: изменение отменено в ветке main - https://bugs.freebsd.org/291511 +
+
+3. **man:pkgbase[7]**: Модернизация системы с версии 14.3 на 15.0 не поддерживается +
+**Обходное решение**: системы, установленные при помощи man:pkgbase[7], должны быть переустановлены с использованием резервных копий +
+**Статус**: работает в соответствии с ожиданиями, man:pkgbase[7] является экспериментальным инструментом +
 
 [[late-news]]
 == Последние новости
@@ -74,5 +84,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (17.12.2025): 09c6d3560c1afbf94282f8cc2e5baf6b4602b17c
+// Original EN revision (04.01.2026): 7b936eee18f57cb2b1f05d5120b9dc45275a163b
 //
