--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -61,7 +61,7 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 == Open Issues
 
 1. **man:ipfw[8]** denies networking when booting a 15.0 kernel with 14.3 userland +
-**Workaround**: upgrade completely before rebooting man:ipfw[8] systems +
+**Workaround**: disable man:ipfw[8] or upgrade completely before rebooting man:ipfw[8] systems +
 **State**: open - https://bugs.freebsd.org/291562 +
 
 2. **man:devinfo[8]** output format accidentally changed +
