FAQ: Fix trivial typo
Reviewed by:	ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/595

--- a/documentation/content/en/books/faq/_index.adoc
+++ b/documentation/content/en/books/faq/_index.adoc
@@ -86,7 +86,7 @@ FreeBSD is developed with a strong commitment to open source principles, fosteri
 This dedication to quality, freedom, and reliability is what sets FreeBSD apart and drives its ongoing success as an open-source project.
 
 [[FreeBSD-usecases]]
-=== What uses cases is FreeBSD good for?
+=== What use cases is FreeBSD good for?
 
 FreeBSD is a versatile operating system that excels in various use cases.
 It is particularly well-suited for server environments, where its stability and performance make it a popular choice for web hosting, databases, and networking applications.
